src/__tests__/__snapshots__/js-invalid-expression-error.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect an error to be thrown 1`] = `
"Pug:2:7
    1| 
  > 2| div= 5) (10
-------------^
    3| 

Syntax Error: Unexpected token"
`;
